# dials_spotfind_benchmark

./: .clang-format  .gitmodules  CMakeLists.txt  README.md  dispersion.ispc  itt.h  spotfind.h  spotfind_bm.cxx  spotfind_test.cxx  summed.ispc
fast_hdf5_eiger_read/: CMakeLists.txt  Makefile  fast_hdf5_eiger_read.c  slow_hdf5_eiger_read.py
